# tanuki-slice

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-19-mr-review-bot.md
docs/superpowers/specs/: 2026-04-19-mr-review-bot-design.md
src/tanuki_slice/: __init__.py  chunker.py  cli.py  scraper.py
src/tanuki_slice/core/: __init__.py  chunker.py  client.py  models.py  scraper.py  tokens.py
src/tanuki_slice/review/: config.py  dedup.py  diff.py  findings.py  llm.py  orchestrator.py  poster.py  prompts.py
tests/: test_chunker.py  test_client.py  test_models.py  test_scraper.py
tests/review/: test_config.py  test_dedup.py  test_diff_parse.py  test_diff_position.py  test_diff_render.py  test_findings.py  test_llm.py  test_orchestrator.py  test_poster.py
